# termnote

./: Cargo.toml  README.md  db.json
.github/workflows/: release.yaml
src/: lib.rs  main.rs
src/adapter/: database_repository.rs  display.rs  mod.rs
src/application/: mod.rs  processor.rs
