[package]
name = "termnote"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36" }
crossterm = "0.29.0"
dirs = "6.0.0"
execute = "0.2.13"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
unicode-width = "0.2.0"
