[package]
name = "termnote"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "tn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47" }
crossterm = "0.29.0"
dirs = "6.0.0"
execute = "0.2.13"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
unicode-width = "0.2.0"
